[package]
name = "adana-script-core"
version = "0.15.1"
edition = "2021"
homepage = "https://github.com/nbittich/adana-script-core"
repository = "https://github.com/nbittich/adana-script-core"
description = "intrinsics for adana"
authors = ["Nordine Bittich"]
license = "MIT"
rust-version = "1.73"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
libloading = "0.8.1"
serde = { version = "1.0.188", features = ["rc"] }
serde_derive = "1.0.188"
strum = { version = "0.25.0", features = ["derive"] }
